--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Money Usage Lists</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <h2>Shopping List:</h2>
+  <ol>
+    <li data-ns-test="shoppingList">New Laptop</li>
+    <li data-ns-test="shoppingList">Travel Backpack</li>
+    <li data-ns-test="shoppingList">Camera</li>
+  </ol>
+
+  <h2>Holiday Destinations:</h2>
+  <ul>
+    <li data-ns-test="holidayList">Bali, Indonesia</li>
+    <li data-ns-test="holidayList">Kyoto, Japan</li>
+    <li data-ns-test="holidayList">Santorini, Greece</li>
+  </ul>
 
 </body>
-
 </html>
